configs/cluster/policy/limit-volume-mounts.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: psp-volume-types
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    volumes:
      # - "*" # * can be used to allow all volume types
      - configMap
      - emptyDir
      - projected
      - secret
      - downwardAPI
      - persistentVolumeClaim
      #- hostPath #required for allowedHostPaths
      - flexVolume #required for allowedFlexVolumes
      - csi
