configs/cluster/policy/ns-must-have-owner.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-geo
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["istio-system", "gke-system", "knative-serving", "knative-eventing", "cloud-run-events", "cloud-run-system", "asm-system", "gke-connect"]
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    labels:
      - key: "owner"
