configs/cluster/policy/run-as-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-pods-allowed-user-ranges
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["microservices-demo", "istio-system", "gke-system", "cloudrun-anthos", "asm-system", "config-management-system"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot # MustRunAsNonRoot # RunAsAny
